Fix percentage widths on inlines within inlines.  b=97695  r+sr=roc